--- a/lecture02/index.html
+++ b/lecture02/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&family=Comforter+Brush&family=Montserrat:wght@300&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto+Condensed&family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -23,7 +26,7 @@
                 <li><a href="#">Testimonial</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <h1 class="logo">Navbar</h1>
+            <h1 class="logo">Ayush</h1>
         </div>
     </nav>
 
@@ -38,11 +41,49 @@
                     My Name is Ayush
                 </h2>
                 <p class="description-content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam fuga quam recusandae ullam fugit dolorum id nesciunt suscipit ipsam, aut omnis necessitatibus adipisci, iure exercitationem soluta natus eius nobis illum incidunt. Nesciunt fugiat inventore sequi perferendis odio tempora excepturi quibusdam, vitae natus aspernatur voluptatem amet distinctio deserunt labore quisquam. Adipisci culpa non quis dolorem obcaecati voluptas iste repellendus, explicabo pariatur, libero maxime ea sint quas. Aliquid sequi dolores dolore blanditiis numquam, omnis, nemo illo nulla aut id, voluptatem natus assumenda. <span style="font-style: italic; font-weight: 700;">Lorem ipsum dolor sit amet.</span> Lorem ipsum dolor sit amet consectetur adipi <button>Read More</button>
+                    Energetic and detail-oriented Software Engineer with a solid foundation in programming languages and 
+a strong academic background. Passionate about problem-solving and eager to contribute to dynamic 
+projects.
                 </p>
+                <button class="description-content-button">Read More</button>
             </div>
             <div class="profile-img-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint magni aliquid odio, quidem officiis eius nam similique exercitationem ipsa. Illum perferendis totam doloremque quasi soluta facere itaque aspernatur obcaecati. Assumenda eveniet doloremque vero eaque labore omnis ratione illum in hic.
+                <img src="./side5-removebg-preview.png" alt="ugvuygvyu">
+            </div>
+        </div>
+        <div class="projects-container">
+            <div class="projects-container-head">
+                <h2 class="projects-container-heading">Projects</h2>
+                <img src="https://www.crio.do/blog/content/images/size/w2000/2020/09/Sep_01.png" alt="project-img">
+            </div>
+            <div class="projects-container-description">
+                
+                <h3>
+                    Mega Blog Website | React, Tailwind CSS, Appwrite
+                </h3>
+                <p>● Utilized Redux for global state management and Appwrite Database for seamless CRUD 
+operations, enabling user authentication and post management (add, update, delete). 
+<p>
+    ● Developed a secure authentication system with Appwrite. 
+</p>
+<p>
+    ● Created multiple responsive pages, including Home, Single Post, Create/Edit Post, and Profile, 
+    to deliver a complete blogging experience. 
+
+</p>
+                </p>      
+                <h3>
+                    News App | HTML, CSS, Javascript, React
+                </h3>
+                <p>
+                    ● Designed and developed a real-time news aggregation platform with API integration, user 
+friendly features, and seamless news filtering.   
+</p>                                                      
+<p>
+    ● Implemented clickable headlines, loading spinner, and dynamic news display for an engaging 
+    user experience.
+</p>
+                                                           
             </div>
         </div>
      </div>
