--- a/UI_Replica/index.html
+++ b/UI_Replica/index.html
@@ -67,11 +67,11 @@
                 <p>It takes no time at all to integrate Huddle with your app’s authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
             </div>
             <div class="content03_img content_img">
-                <img src="./assets/illustration-flowing-conversation.svg" alt="peopleTalking">
+                <img src="./assets/illustration-your-users.svg" alt="peopleTalking">
             </div>
         </div>
         <div class="wave">
-            <svg width="1440" height="139" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v162H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)"><path d="M-5.845-498.692C254.493-641 483.665-676.577 681.673-605.422c297.011 106.73 536.472 92.279 752.482 0 144.006-61.52 144.006 146.903 0 625.271-235.532 101.575-436.707 121.978-603.526 61.208C580.4-10.098 200.12-10.098.438 138.207c-133.123 98.87-135.217-113.43-6.283-636.899z" fill="#F6FBFF"/><path d="M760-521h560V39H760z"/></g></g></svg>
+            <svg width="1540" height="139" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v162H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)"><path d="M-5.845-498.692C254.493-641 483.665-676.577 681.673-605.422c297.011 106.73 536.472 92.279 752.482 0 144.006-61.52 144.006 146.903 0 625.271-235.532 101.575-436.707 121.978-603.526 61.208C580.4-10.098 200.12-10.098.438 138.207c-133.123 98.87-135.217-113.43-6.283-636.899z" fill="#F6FBFF"/><path d="M760-521h560V39H760z"/></g></g></svg>
         </div>
     </div>
     <div class="join">
@@ -83,7 +83,7 @@
     </div>
     <div class="footer">
         <div class="footer-content">
-            <img src="./assets/logo.svg" alt="logo">
+            <img src="./assets/Screenshot 2025-02-08 005940.png" alt="logo">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
                 vestibulum a, ultrices quis sem.</p>
             <div class="footer-content_phone">
@@ -96,17 +96,17 @@
 
             </div>
             <div class="footer-content_social">
-                <img src="./assets/" alt="facebook">
+                <ion-icon name="logo-facebook"></ion-icon>
                 <ion-icon name="logo-instagram"></ion-icon>
-                <img src="" alt="tweeter">
+                <ion-icon name="logo-twitter"></ion-icon>
             </div>  
         </div>
         <div class="footer_newsletter">
             <h3>Newsletter</h3>
             <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never
                 send you spam or pass on your email address</p>
-            <input type="email" placeholder="Enter your email">
-            <button class="btn-primary">Subscribe</button>
+            <input type="email">
+            <button class="custom-btn">Subscribe</button>
         </div>
     </div>
     
