--- a/UI_Replica/index.html
+++ b/UI_Replica/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huddle</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="nav">
@@ -34,8 +36,11 @@
         </div>
     </div>
     <div class="content">
-        <div class="wave">
-            <svg width="1440" height="165" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v165H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)" fill="#F6FBFF"><path d="M0 127.6C152.937 41.92 298.933 25.782 437.988 79.187c208.583 80.107 457.536 53.405 594.167 0C1168.785 25.782 1172.696-39.335 1440 30.224c267.304 69.56 0 698.192 0 698.192s-211.887 128.179-591.858 64.09C594.828 749.779 312.114 765.996 0 841.156V127.6z"/></g></g></svg>
+        <div class="wave mobile">
+            <img src="./assets/bg-section-top-mobile-1.svg" alt="mobile_wave">
+        </div>
+        <div class="wave desktop">
+            <img src="./assets/bg-section-top-desktop-1.svg" alt="Web_wave">
         </div>
         <div class="content01 content_flex">
             <div class="content01_note content_note">
@@ -46,8 +51,11 @@
                 <img src="./assets/illustration-grow-together.svg" alt="peopleTalking">
             </div>
         </div>
-        <div class="wave">
-            <svg width="1440" height="139" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v139H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)"><path d="M0-574.4c152.937-85.68 298.933-101.818 437.988-48.413 208.583 80.107 457.536 53.405 594.167 0 136.63-53.405 140.541-118.522 407.845-48.963 267.304 69.56 0 698.192 0 698.192s-211.887 128.179-591.858 64.09C594.828 47.779 312.114 63.996 0 139.156V-574.4z" fill="#F6FBFF"/><path d="M750-537h560V23H750z"/></g></g></svg>
+        <div class="wave mobile">
+            <img src="./assets/bg-section-bottom-mobile-1.svg" alt="mobile_wave">
+        </div>
+        <div class="wave desktop">
+            <img src="./assets/bg-section-bottom-desktop-1.svg" alt="">
         </div>
         <div class="content02 content_flex">
             <div class="content02_img content_img">
@@ -58,8 +66,11 @@
                 <p>You wouldn’t paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
             </div>
         </div>
-        <div class="wave">
-            <svg width="1440" height="156" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v156H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)"><path d="M-5.845 142.308C254.493 0 483.665-35.577 681.673 35.578c297.011 106.73 536.472 92.279 752.482 0 144.006-61.52 144.006 146.903 0 625.271-235.532 101.575-436.707 121.978-603.526 61.208C580.4 630.902 200.12 630.902.438 779.207c-133.123 98.87-135.217-113.43-6.283-636.899z" fill="#F6FBFF"/><path d="M760 120h560v560H760z"/></g></g></svg>
+        <div class="wave mobile">
+            <img src="./assets/bg-section-top-mobile-2.svg" alt="mobile_wave">
+        </div>
+        <div class="wave desktop">
+            <img src="./assets/bg-section-top-desktop-2.svg" alt="">
         </div>
         <div class="content03 content_flex">
             <div class="content03_note content_note">
@@ -70,16 +81,22 @@
                 <img src="./assets/illustration-your-users.svg" alt="peopleTalking">
             </div>
         </div>
-        <div class="wave">
-            <svg width="1540" height="139" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v162H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)"><path d="M-5.845-498.692C254.493-641 483.665-676.577 681.673-605.422c297.011 106.73 536.472 92.279 752.482 0 144.006-61.52 144.006 146.903 0 625.271-235.532 101.575-436.707 121.978-603.526 61.208C580.4-10.098 200.12-10.098.438 138.207c-133.123 98.87-135.217-113.43-6.283-636.899z" fill="#F6FBFF"/><path d="M760-521h560V39H760z"/></g></g></svg>
+        <div class="wave mobile">
+            <img src="./assets/bg-section-bottom-mobile-2.svg" alt="mobile_wave">
+        </div>
+        <div class= "wave desktop">
+            <img src="./assets/bg-section-bottom-desktop-2.svg" alt="mobile_wave">
         </div>
     </div>
     <div class="join">
         <h2>Ready To Build Your Community?</h2>
         <button class="custom-btn">Get Started For Free</button>
     </div>
-    <div class="wave">
-        <svg width="1440" height="158" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M0 0h1440v158H0z"/></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><g mask="url(#b)" fill="#00252E"><path d="M0 99.424C249.852-14.173 492.347-30.427 727.484 50.661c352.706 121.632 501.421 140.534 727.484 0 150.71-93.69 150.71 129.423 0 669.339H0V99.424z"/></g></g></svg>
+    <div class="wave mobile">
+        <img src="./assets/bg-footer-top-mobile.svg" alt="mobile_wave">
+    </div>
+    <div class="wave desktop">
+        <img src="./assets/bg-footer-top-desktop.svg" alt="web_wave">
     </div>
     <div class="footer">
         <div class="footer-content">
