--- a/UI_Replica/index.html
+++ b/UI_Replica/index.html
@@ -55,7 +55,7 @@
             <img src="./assets/bg-section-bottom-mobile-1.svg" alt="mobile_wave">
         </div>
         <div class="wave desktop">
-            <img src="./assets/bg-section-bottom-desktop-1.svg" alt="">
+            <img src="./assets/bg-section-bottom-desktop-1.svg" alt="web_wave">
         </div>
         <div class="content02 content_flex">
             <div class="content02_img content_img">
@@ -70,7 +70,7 @@
             <img src="./assets/bg-section-top-mobile-2.svg" alt="mobile_wave">
         </div>
         <div class="wave desktop">
-            <img src="./assets/bg-section-top-desktop-2.svg" alt="">
+            <img src="./assets/bg-section-top-desktop-2.svg" alt="web_wave">
         </div>
         <div class="content03 content_flex">
             <div class="content03_note content_note">
